--- a/packages/docs/src/pages/tokens/font-sizes.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-sizes.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 import { TokensGrid } from '../../components/TokensGrid';
-import { fontSizes } from '@modern-ui/tokens';
+import { fontSizes } from '@modernui/tokens';
 
 <Meta title="Tokens/Font Sizes" />
 
