--- a/packages/docs/src/pages/tokens/fonts.stories.mdx
+++ b/packages/docs/src/pages/tokens/fonts.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 import { TokensGrid } from '../../components/TokensGrid';
-import { fonts } from '@modern-ui/tokens';
+import { fonts } from '@modernui/tokens';
 
 <Meta title="Tokens/Font Families" />
 
