--- a/packages/docs/src/pages/tokens/line-height.stories.mdx
+++ b/packages/docs/src/pages/tokens/line-height.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 import { TokensGrid } from '../../components/TokensGrid';
-import { lineHeights } from '@modern-ui/tokens';
+import { lineHeights } from '@modernui/tokens';
 
 <Meta title="Tokens/Line Heights" />
 
